remove java 9 and 11 apis